# clean-cpanel-plugin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
documents/: API_REFERENCE.md  CPANEL_PLUGIN_SPECIFICATION.md  IMPLEMENTATION_PLAN.md
packaging/config/: frame.conf  limits.conf
packaging/rpm/: frame-cpanel.spec
packaging/systemd/: frame-manager.service
scripts/: install.sh  quick-install.sh  uninstall.sh  upgrade.sh
src/apache/conf/: frame-pre-virtualhost.conf  frame.conf
src/apache/error-pages/: 502.html  503.html  504.html
src/apache/scripts/: frame-apache-ctl.sh  generate-vhost.pl
src/apache/templates/: proxy-path.conf.tmpl  vhost-ssl.conf.tmpl  vhost.conf.tmpl
src/api/cpanel/: Frame.pm
src/api/whm/: Frame.pm
src/cpanel/: api.live.cgi  index.live.cgi
src/cpanel/assets/css/: frame.css
src/cpanel/lib/: FrameCpanel.pm
src/cpanel/plugin/: frame_cpanel.conf  install.json  plugin.json
src/cpanel/views/: apps.tt  dashboard.tt  deploy.tt  logs.tt  settings.tt
src/hooks/: postacctremove  postwwwacct  prekillacct
src/manager/: Cargo.toml
src/manager/src/: lib.rs  main.rs  manager.rs
src/manager/src/api/: handlers.rs  mod.rs  routes.rs
src/manager/src/config/: mod.rs  parser.rs
src/manager/src/events/: hooks.rs  mod.rs
src/manager/src/health/: checks.rs  mod.rs
src/manager/src/instance/: mod.rs  process.rs  resource.rs
src/manager/src/metrics/: mod.rs  prometheus.rs
src/manager/src/port/: mod.rs  registry.rs
src/whm/: api.cgi  index.cgi
src/whm/assets/js/: frame.js
src/whm/lib/: FrameWHM.pm
src/whm/plugin/: frame_whm.conf  whm_plugin.json
src/whm/templates/: index.tmpl  instances.tmpl  logs.tmpl  settings.tmpl
tests/: integration_test.sh  test_manager_api.sh
(+10 files in other folders)
