[package]
name = "frame-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Frame Service Manager daemon for cPanel"

[[bin]]
name = "frame-manager"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
nix.workspace = true
configparser.workspace = true
chrono.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.10"
